# genos-engine

./: Dockerfile  docker-compose.yml  pyproject.toml
config/: 10woongi.yaml  3eyes.yaml  simoon.yaml  tbamud.yaml
core/: ansi.py  api.py  db.py  engine.py  korean.py  lua_commands.py  net.py  reload.py  session.py  watcher.py  world.py
data/10woongi/: banner.txt
data/3eyes/: banner.txt  menu.txt  news.txt
data/tbamud/: banner.txt
docs/: 10woongi_Implementation_Report.md  3eyes_Porting_Plan.md  3eyes_Porting_Reference.md  GenOS_Complete_Porting_Guide.md  tbaMUD-KR_Implementation_Report.md
games/10woongi/: constants.py  game.py  level.py  login.py  stats.py
games/3eyes/: constants.py  game.py  level.py  login.py
games/simoon/: constants.py  game.py  level.py  login.py
scripts/: extract_perm_data.py  init-db.sh
tests/: test_10w_combat.py  test_10w_commands.py  test_10w_equip.py  test_10w_foundation.py  test_10w_integration.py  test_10w_level.py  test_10w_login.py  test_10w_skills.py  test_10w_stats.py  test_10w_world.py  test_ansi.py  test_db.py  test_engine.py  test_korean.py  test_lua_10woongi.py  test_lua_3eyes.py  test_lua_combat.py  test_lua_framework.py  test_lua_simoon.py  test_net.py  test_reload.py  test_session.py  test_sprint2_dispatcher.py  test_sprint2_doors.py  test_sprint2_social.py  test_sprint3_combat.py  test_sprint3_death_level.py  test_sprint3_engine.py  test_sprint3_spells.py  test_sprint4_extended.py  test_sprint4_shops.py  test_sprint5_admin.py  test_sprint5_api.py  test_sprint5_triggers.py  test_sprint6_integration.py  test_world.py
(+118 files in other folders)
