[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "genos-engine"
version = "0.1.0"
description = "GenOS MUD Game Engine"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.29",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "lupa>=2.2",
    "watchfiles>=0.24",
    "bcrypt>=4.2",
    "pyyaml>=6.0",
    "websockets>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.7",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "games*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"
